--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,31 @@ background-color: rgba(255, 255, 255, 0.8);
     /* visibility: hidden; */
     /* display: none; */
 } 
+.bottom-container{
+    height: 400px;
+    display: block;
+    width: 100%;
+    
+    margin:30px auto;
+    background-color: tan;
+    
+}
+.image-container{
+   
+}
+.exercise-image{
+    margin-left: 200px;
+    width: 50%;
+    float:left;
+}
+.exercise-title{
+    padding-top: 30px;
+    font-size: 24px;
+text-align: center;
+ }
+ .exercise-text{
+     font-size: 16px;
+     padding-right: 250px;
+     margin-left: 20px;
+
+ }
