--- a/styles.css
+++ b/styles.css
@@ -190,21 +190,26 @@ color: #f3ecc2;
 }
 .pump-container {
     border-top: 2px solid #f9d56e;
-    padding: 5px 0px 30px;
-    margin: 0px auto;
+    padding: 40px 0px 40px;
     height: 70px;
     width: 100%;
     background-color: #e8505b;
+    
 }
 
 .super-pump {
+    margin-left: 350px;
+    margin-right: 50px;
     background-color: rgb(255, 187, 0);
     width: 20%;
-    margin: 0px auto;
-    padding-top: 5px;
-    margin-top: 10px;
+    float: left;
+    padding: 5px 10px 0px;    
     height: 60px;
     border-radius: 5px;
+}
+.super-pump-center{
+    margin-right:0px;
+    margin-left:500px;
 }
 
 .pump-img {
@@ -213,8 +218,15 @@ color: #f3ecc2;
     float: left;
     padding-right: 5px;
 }
-
-.main-container {}
+.super-endurance{
+    background-color: rgb(255, 187, 0);
+    width: 20%;
+    float: left;
+    padding: 5px 10px 0px; 
+    
+    height: 60px;
+    border-radius: 5px;
+}
 
 .grid-container {
     display: grid;
