--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Lato;
-    background-image: url("./images/backgroundimg.jpg")
+    background: rgb(0,173,181);
+background: linear-gradient(0deg, rgba(0,173,181,1) 0%, rgba(34,40,49,1) 72%);
 }
 
 .main-component {
@@ -22,13 +23,13 @@ body {
 }
 
 .heading h1 {
-    color: #f3ecc2;
+    color: #eeeeee;
     margin: 0px;
     font-size: 70px;
 }
 
 .heading h3 {
-    color: #f3ecc2;
+    color: #eeeeee;
     font-size: 30px;
     margin-top: 20px;
 
@@ -45,11 +46,11 @@ body {
 
 /* Navbar container */
 .navbar {
-    border-bottom: 2px solid #f9d56e;
+    border-bottom: 2px solid #00adb5;
 
     margin: auto;
     overflow: hidden;
-    background-color: #e8505b;
+    background-color: #222831;
     height: 100px;
     border-radius: 10px 10px 0px 0px;
 
@@ -66,7 +67,7 @@ body {
 /* Links inside the navbar */
 .navbar a {
     float: left;
-    font-size: 18px;
+    font-size: 16px;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -82,7 +83,7 @@ body {
 
 /* Dropdown button */
 .dropdown .dropbtn {
-    font-size: 20px;
+    font-size: 18px;
     border: none;
     outline: none;
     color: white;
@@ -95,7 +96,7 @@ body {
 /* Add a red background color to navbar links on hover */
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-    color: #f9d56e;
+    color: #00adb5
 }
 
 /* Dropdown content (hidden by default) */
@@ -120,7 +121,8 @@ body {
 
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: #e8505b;
+    background-color: #00adb5;
+    color:#eeeeee;
 }
 
 /* Show the dropdown menu on hover */
@@ -134,10 +136,10 @@ body {
 }
 
 .training-options {
-
+    color:#eeeeee;
     display: grid;
     grid-template-columns: auto auto;
-    background-color: #14b1ab;
+    background-color: #393e46;
     padding: 10px;
     grid-gap: 5px;
     height: 150px;
@@ -162,7 +164,8 @@ display:none;
 height:200px;
 margin:auto;
 width: 100%;
-background-color: #14b1ab;
+background-color: #393e46;
+color: #eeeeee;
 
 }
 .routine-details img{
@@ -177,7 +180,7 @@ background-color: #14b1ab;
     width: 20%;
     float: left;
 font-size: 30px;
-color: #f3ecc2;
+
 }
 .routine-text{
     margin-left: 20px;
@@ -185,22 +188,23 @@ color: #f3ecc2;
     padding-top: 40px;
     width: 40%;
    float: left;
-    color: #f3ecc2;
+    
     
 }
 .pump-container {
-    border-top: 2px solid #f9d56e;
+    border-top: 2px solid #00adb5;
     padding: 20px 0px 20px;
     height: 70px;
     width: 100%;
-    background-color: #e8505b;
+    background-color: #222831;
     
 }
 
 .super-pump {
+    color:#eeeeee;
     margin-left: 350px;
     margin-right: 50px;
-    background-color: rgb(255, 187, 0);
+    background-color: #00adb5;
     width: 20%;
     float: left;
     padding: 5px 10px 0px;    
@@ -219,7 +223,8 @@ color: #f3ecc2;
     padding-right: 5px;
 }
 .super-endurance{
-    background-color: rgb(255, 187, 0);
+    color:#eeeeee;
+    background-color: #00adb5;
     width: 20%;
     float: left;
     padding: 5px 10px 0px; 
@@ -231,7 +236,8 @@ color: #f3ecc2;
 .grid-container {
     display: grid;
     grid-template-columns: 100px 100px auto 150px 150px 150px 150px;
-    background-color: #14b1ab;
+    background-color: #393e46;
+    color:#eeeeee;
     padding: 2px;
     grid-gap: 5px;
 
@@ -239,17 +245,17 @@ color: #f3ecc2;
 
 .grid-item {
 
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #222831;
     font-size: 20px;
     text-align: center;
 }
 
 .container-zero {
     padding: 20px 0px;
-
+color: #eeeeee;
     height: 30px;
 
-    background-color: #14b1ab;
+    background-color: #393e46;
     grid-gap: 5px;
 }
 
@@ -274,6 +280,8 @@ color: #f3ecc2;
     height: 50px;
     width: 90px;
     border-radius: 5px;
+    background: #00adb5;
+color: #eeeeee;
 
 }
 
@@ -285,17 +293,17 @@ color: #f3ecc2;
 .random-img {
     height: 20px;
     width: 20px;
-
-
+    
 }
 
 .bottom-container {
+    color: #eeeeee;
     height: 400px;
     display: block;
     width: 100%;
     border-radius: 0px 0px 10px 10px;
     margin: 0px auto 30px;
-    background-color: #e8505b;
+    background-color: #393e46;
 
 }
 
@@ -325,6 +333,6 @@ color: #f3ecc2;
     float: right;
     width: 40%;
     padding-right: 120px;
-
+    
     height: 180px;
 }
