--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Lato;
     background: rgb(0, 173, 181);
@@ -9,7 +8,6 @@ body {
     display: block;
     margin: 0px auto;
     width: 1280px;
-
     background-color: inherit;
 
 }
@@ -24,16 +22,23 @@ body {
 }
 
 .heading h1 {
+
     color: #eeeeee;
     margin: 0px;
     font-size: 70px;
 }
 
 .heading h3 {
+
     color: #eeeeee;
-    font-size: 30px;
+    font-size: 18px;
     margin-top: 20px;
 
+}
+
+#programm {
+    font-family: 'Nanum Gothic Coding', monospace;
+    color: #00adb5;
 }
 
 .heading img {
@@ -197,7 +202,7 @@ body {
 }
 
 .pump-container {
-    
+
     padding: 20px 0px 20px;
     height: 70px;
     width: 100%;
@@ -217,13 +222,16 @@ body {
     height: 60px;
     border-radius: 5px;
 }
-.super-pump:hover{
+
+.super-pump:hover {
     border-color: #eeeeee;
     background-color: #222831;
 }
-.super-pump:active{
+
+.super-pump:active {
     transform: translateY(4px);
 }
+
 .super-pump-center {
     margin-right: 0px;
     margin-left: 500px;
@@ -246,13 +254,16 @@ body {
     height: 60px;
     border-radius: 5px;
 }
-.super-endurance:hover{
+
+.super-endurance:hover {
     border-color: #eeeeee;
     background-color: #222831;
 }
-.super-endurance:active{
+
+.super-endurance:active {
     transform: translateY(4px);
 }
+
 .grid-container {
     display: grid;
     grid-template-columns: 100px 100px auto 150px 150px 150px 150px;
@@ -297,7 +308,7 @@ body {
 }
 
 .btn {
-    
+
     height: 60px;
     width: 90px;
     font-size: 16px;
@@ -370,4 +381,39 @@ body {
     padding-right: 120px;
 
     height: 180px;
+}
+
+.copy-container {
+    padding-top: 20px;
+    width: 100%;
+    background-color: #222831;
+    height: 80px;
+}
+
+.copy-button {
+    border: 1px solid #eeeeee;
+    color: #eeeeee;
+    margin: auto;
+
+    background-color: #393e46;
+    width: 200px;
+
+    padding: 5px 0px 0px;
+    height: 60px;
+    border-radius: 5px;
+}
+
+.copy-img {
+    padding-left: 10px;
+    height: 50px;
+    float: left;
+    padding-right: 5px;
+
+}
+.copy-button:hover {
+    border-color: #00adb5;
+}
+
+.copy-button:active {
+    transform: translateY(4px);
 }
