--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 .main-component {
     display: block;
     margin: 0px auto;
-    width: 1280px;
+    width: 80%;
     background-color: inherit;
 }
 
