maincomponent width changed to px

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 .main-component {
     display: block;
     margin: 0px auto;
-    width: 80%;
+    width: 1280px;
     background-color: inherit;
 }
 
