--- a/css/styles.css
+++ b/css/styles.css
@@ -490,6 +490,6 @@ box-shadow: 0px 0px 10px #00adb5;
     background: #0b8088;
     color: #222831;
     padding: 5px;
-    border-radius: 10px;
     text-align: center;
+    margin:0px;
 }
