--- a/css/styles.css
+++ b/css/styles.css
@@ -461,6 +461,11 @@ box-shadow: 0px 0px 10px #00adb5;
     transform: translateY(4px);
 }
 
+.form-title{
+    color: #00adb5;
+    margin-bottom:10px;
+}
+
 .form-container{
     border-radius: 10px;
     display: flex;
@@ -492,4 +497,21 @@ box-shadow: 0px 0px 10px #00adb5;
     padding: 5px;
     text-align: center;
     margin:0px;
+}
+
+#form{
+    position: relative;
+    margin-bottom: 50px;
+}
+
+.submit-buton{
+    position: absolute;
+    right:0;
+    margin-top:10px;
+    padding: 10px;
+    border: 1px solid #0b8088;
+    color: #eeeeee;
+    background-color: #393e46;
+    border-radius: 5px;
+    
 }
